fix(atomic,headless): fix atomic pager size overflow + headless page fraction
https://coveord.atlassian.net/browse/KIT-1906

--- a/packages/atomic/src/components/search/atomic-pager/atomic-pager.pcss
+++ b/packages/atomic/src/components/search/atomic-pager/atomic-pager.pcss
@@ -2,5 +2,6 @@
 
 button,
 .btn-page {
-  @apply w-10 h-10;
+  @apply min-w-[2.5rem] min-h-[2.5rem];
+  @apply p-1;
 }
